--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.16.0",
     "reactstrap": "^9.2.0",
     "remixicon": "^3.5.0"
