--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
+    "i18next": "^23.7.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
