--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.16.0",
+    "react-spring": "^9.7.3",
     "reactstrap": "^9.2.0",
     "remixicon": "^3.5.0"
   },
