--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.2",
+    "@stripe/stripe-js": "^4.0.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "i18next": "^23.7.11",
