--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "doc": "documentation build src/**/*.js src/**/*.jsx -f html -o doc"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.7.2",
