--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "doc": "documentation build src/**/*.js src/**/*.jsx -f html -o ../docs"
+    "doc": "documentation build src/**/*.js src/**/*.jsx -f html -o docs"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.7.2",
