--- a/DuelOfReigns/package.json
+++ b/DuelOfReigns/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "doc": "documentation build src/**/*.js src/**/*.jsx -f html -o docs"
+    "doc": "documentation build src/**/*.js src/**/*.jsx -f html -o docs",
+    "i18n:scan": "i18next-scanner --config i18next-scanner.config.cjs"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.7.2",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "i18next-scanner": "^4.5.0",
     "vite": "^4.4.5"
   }
 }
